test/driver/attributes/fail02.ml
let f x = 1 [@@deprecatd "..."]
